tests/paczka1/small_fuzzy/57598091.err
Error in line 1: xmlxUHwPOJ S887 45,6
Error in line 4: xmlxUHwPOJ S304 98,9
Error in line 6: wws A951 64,2
Error in line 7: xmlxUHwPOJ S887 87,7
Error in line 14: wws A951 21,1
